Cleaning up code...